web/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:   backend-nginx
  namespace: app
  labels:
    app:   backend-nginx
spec:
  selector:
    matchLabels:
      app:   backend-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app:   backend-nginx
    spec:
      containers:
      - name:   backend-nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
        resources:
          requests:
            cpu: "0.2"
            memory: "100Mi"
          limits:
            cpu: "0.5"
            memory: "500Mi"
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d
          - name: page-files
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-config
          configMap:
            name:   backend-nginx-config
        - name: page-files
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name:   backend-nginx-service
  namespace: app
  labels:
    app:   backend-nginx
spec:
  selector:
    app:   backend-nginx
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
