web/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.demo.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: app-nginx-service
            port:
              name: http
  defaultBackend:
    service:
      name: backend-nginx-service
      port:
        number: 80
